@@ -27,8 +27,16 @@ import com.sparta.spartatigers.domain.item.dto.request.ItemCreateRequest;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.sparta.spartatigers.domain.directRoom.repository.DirectRoomRepository;
+import com.sparta.spartatigers.domain.exchangerequest.repository.ExchangeRequestRepository;
+import com.sparta.spartatigers.domain.exchangerequest.model.ExchangeRequest;
+import com.sparta.spartatigers.domain.exchangerequest.model.ExchangeStatus;
+import com.sparta.spartatigers.global.firebase.FCMService;
+import com.sparta.spartatigers.domain.stompchat.pubsub.RedisDirectMessagePublisher;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -38,16 +46,34 @@ import java.util.Map;
 public class ItemService {
 
     private static final double SEARCH_RADIUS_KM = 0.05;
+    // [FIX] 문제 4: 기본 반경 매직 넘버 2.0 상수 추출 — 운영 중 정책 변경 시 일관 수정 용이
+    private static final double DEFAULT_LOCATION_SEARCH_RADIUS_KM = 2.0;
     private final ItemRepository itemRepository;
     private final UserRepository userRepository;
     private final ApplicationEventPublisher applicationEventPublisher;
     private final LocationService locationService;
     private final ObjectMapper objectMapper;
+    private final ExchangeRequestRepository exchangeRequestRepository;
+    private final DirectRoomRepository directRoomRepository;
+    private final FCMService fcmService;
+    private final RedisDirectMessagePublisher redisDirectMessagePublisher;
+
+    @Transactional(readOnly = true)
+    public void validateCanCreateItem(TokenClaim tokenClaim) {
+        checkDuplicateItemByUserId(tokenClaim.getUserId());
+    }
+
+    private void checkDuplicateItemByUserId(Long userId) {
+        if (itemRepository.existsByUserIdAndStatus(userId, ItemStatus.REGISTERED)) {
+            throw new InvalidRequestException(ExceptionCode.ITEM_ALREADY_EXISTS);
+        }
+    }
 
     @Transactional
-    public ItemResponseDto createItemWithImages(ItemCreateRequest request, TokenClaim tokenClaim, List<String> imageUrls) {
+    public ItemResponseDto createItemWithImages(ItemCreateRequest request, TokenClaim tokenClaim,
+            List<String> imageUrls) {
         User user = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
 
         // 이미지 URL 리스트를 JSON으로 안전하게 직렬화
         String imageUrlsJson = serializeImageUrls(imageUrls);
@@ -66,8 +92,9 @@ public class ItemService {
             address = location.address();
         }
 
-        Item item = new Item(request.category(), imageUrlsJson, request.seatInfo(), 
-                request.title(), request.description(), latitude, longitude, address, ItemStatus.REGISTERED, user, LocalDate.now());
+        Item item = new Item(request.category(), imageUrlsJson, request.seatInfo(),
+                request.title(), request.description(), latitude, longitude, address, request.desiredItem(),
+                ItemStatus.REGISTERED, user, LocalDate.now());
 
         Item savedItem = itemRepository.save(item);
 
@@ -81,7 +108,7 @@ public class ItemService {
     @Transactional
     public void updateItemStatus(TokenClaim tokenClaim, Long itemId, UpdateItemStatusRequestDto request) {
         User user = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
 
         Item item = itemRepository.findByIdAndStatusAndDateOrElseThrow(itemId);
         item.validateUserIsOwner(user);
@@ -89,20 +116,67 @@ public class ItemService {
         switch (request.action()) {
             case COMPLETE -> {
                 item.complete();
-                ItemLocationUpdatedEvent completeEvent = new ItemLocationUpdatedEvent(item.getUser().getId(), "REMOVE_ITEM",
+                // 상태별 개별 조회를 없애고 IN 쿼리로 한 번에 메모리에 적재하여 N+1 이슈 완화
+                List<ExchangeRequest> activeRequests = exchangeRequestRepository.findByItemIdAndStatusIn(
+                        item.getId(), List.of(ExchangeStatus.ACCEPTED, ExchangeStatus.PENDING));
+
+                for (ExchangeRequest req : activeRequests) {
+                    if (req.getStatus() == ExchangeStatus.ACCEPTED) {
+                        req.updateStatus(ExchangeStatus.COMPLETED);
+                        directRoomRepository.findByExchangeRequestId(req.getId())
+                                .ifPresent(room -> {
+                                    room.complete();
+                                    publishSystemStatusUpdatedMessage(room.getId());
+                                });
+                    } else if (req.getStatus() == ExchangeStatus.PENDING) {
+                        req.updateStatus(ExchangeStatus.REJECTED);
+                        // [FIX] FCMService 캡슐화 적용: 트랜잭션 커밋 후 안전하게 알림 발송
+                        fcmService.sendNotificationAfterCommit(
+                                req.getSender().getDeviceToken(),
+                                "교환 요청 거절",
+                                "다른 사용자와 교환이 완료되어 요청이 거절되었습니다.",
+                                req.getSender().getId());
+                    }
+                }
+
+                ItemLocationUpdatedEvent completeEvent = new ItemLocationUpdatedEvent(item.getUser().getId(),
+                        "REMOVE_ITEM",
                         Map.of("itemId", item.getId(), "userId", item.getUser().getId()));
                 applicationEventPublisher.publishEvent(completeEvent);
             }
 
             case CANCEL -> {
                 item.reopen();
+                List<ExchangeRequest> activeRequests = exchangeRequestRepository.findByItemIdAndStatusIn(
+                        item.getId(), List.of(ExchangeStatus.ACCEPTED, ExchangeStatus.PENDING));
+
+                for (ExchangeRequest req : activeRequests) {
+                    ExchangeStatus previousStatus = req.getStatus();
+                    req.updateStatus(ExchangeStatus.REJECTED);
+
+                    // [FIX] FCMService 캡슐화 적용: 트랜잭션 커밋 후 안전하게 알림 발송
+                    fcmService.sendNotificationAfterCommit(
+                            req.getSender().getDeviceToken(),
+                            "교환 취소",
+                            "상대방의 사정으로 교환이 취소되었습니다.",
+                            req.getSender().getId());
+
+                    // [FIX] 상태 변경 전 ACCEPTED 였던 경우에만 시스템 메시지 발행
+                    if (previousStatus == ExchangeStatus.ACCEPTED) {
+                        directRoomRepository.findByExchangeRequestId(req.getId())
+                                .ifPresent(room -> publishSystemStatusUpdatedMessage(room.getId()));
+                    }
+                }
+
                 ReadItemResponseDto newItemDto = ReadItemResponseDto.from(item, this);
-                ItemLocationUpdatedEvent cancelEvent = new ItemLocationUpdatedEvent(item.getUser().getId(), "ADD_ITEM", newItemDto);
+                ItemLocationUpdatedEvent cancelEvent = new ItemLocationUpdatedEvent(item.getUser().getId(), "ADD_ITEM",
+                        newItemDto);
                 applicationEventPublisher.publishEvent(cancelEvent);
             }
             case DELETE -> {
                 item.deleteItem();
-                ItemLocationUpdatedEvent deleteEvent = new ItemLocationUpdatedEvent(item.getUser().getId(), "REMOVE_ITEM",
+                ItemLocationUpdatedEvent deleteEvent = new ItemLocationUpdatedEvent(item.getUser().getId(),
+                        "REMOVE_ITEM",
                         Map.of("itemId", item.getId(), "userId", item.getUser().getId()));
                 applicationEventPublisher.publishEvent(deleteEvent);
             }
@@ -111,23 +185,56 @@ public class ItemService {
     }
 
     @Transactional(readOnly = true)
-    public Page<ReadItemResponseDto> findAllItems(TokenClaim tokenClaim, Pageable pageable) {
+    public Page<ReadItemResponseDto> findAllItems(TokenClaim tokenClaim, Pageable pageable,
+            Double latitude, Double longitude, Double radius) {
 
         Long userId = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() ->  new InvalidRequestException(ExceptionCode.VALIDATION_ERROR)).getId();
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR)).getId();
 
-        List<Long> nearByUserIds = locationService.findUsersNearBy(userId, SEARCH_RADIUS_KM);
-        nearByUserIds.add(userId);
+        // 좌표 기반 검색 여부 확인
+        if (latitude != null && longitude != null) {
+            // [FIX] 문제 4: 2.0 값을 DEFAULT_LOCATION_SEARCH_RADIUS_KM 상수로 대체
+            double searchRadius = radius != null ? radius : DEFAULT_LOCATION_SEARCH_RADIUS_KM;
 
-        return itemRepository.findAllItems(ItemStatus.REGISTERED, LocalDate.now(), nearByUserIds, pageable)
-                .map(item -> ReadItemResponseDto.from(item, this));
+            // [FIX] 공간 쿼리 최적화: Bounding Box 계산 (1도 위도 ~= 111km)
+            double latDiff = searchRadius / 111.0;
+            double lonDiff = searchRadius / (111.0 * Math.cos(Math.toRadians(latitude)));
+
+            double minLat = latitude - latDiff;
+            double maxLat = latitude + latDiff;
+            double minLon = longitude - lonDiff;
+            double maxLon = longitude + lonDiff;
+
+            return itemRepository.findAllItemsByLocation(
+                    ItemStatus.REGISTERED,
+                    LocalDate.now(),
+                    userId,
+                    latitude,
+                    longitude,
+                    minLat,
+                    maxLat,
+                    minLon,
+                    maxLon,
+                    searchRadius,
+                    pageable).map(item -> ReadItemResponseDto.from(item, this));
+        } else {
+            // 기존 로직: 근처 사용자 기반 검색
+            // [FIX] 문제 3: locationService.findUsersNearBy()가 불변 List(List.of 등)를 반환하는 경우
+            // add() 호출 시 UnsupportedOperationException 발생
+            // 방어적으로 ArrayList로 복사하여 수정 가능한 리스트로 보장
+            List<Long> nearByUserIds = new ArrayList<>(locationService.findUsersNearBy(userId, SEARCH_RADIUS_KM));
+            nearByUserIds.add(userId);
+
+            return itemRepository.findAllItems(ItemStatus.REGISTERED, LocalDate.now(), nearByUserIds, pageable)
+                    .map(item -> ReadItemResponseDto.from(item, this));
+        }
     }
 
     @Transactional(readOnly = true)
     public Page<ReadItemResponseDto> findMyItems(TokenClaim tokenClaim, Pageable pageable) {
         Long userId = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR))
-            .getId();
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR))
+                .getId();
 
         return itemRepository.findAllMyItems(ItemStatus.REGISTERED, LocalDate.now(), userId, pageable)
                 .map(item -> ReadItemResponseDto.from(item, this));
@@ -137,8 +244,9 @@ public class ItemService {
     public ReadItemDetailResponseDto findItemById(Long itemId, FindItemByIdRequestDto request) {
 
         Item item = itemRepository.findByIdAndStatusAndDateOrElseThrow(itemId);
-        Integer distance = locationService.calculateDistance(request.latitude(),
-            request.longitude(), item);
+        Double lat = request.latitude() != null ? request.latitude().doubleValue() : null;
+        Double lon = request.longitude() != null ? request.longitude().doubleValue() : null;
+        Integer distance = locationService.calculateDistance(lat, lon, item);
 
         return ReadItemDetailResponseDto.from(item, distance);
     }
@@ -147,14 +255,14 @@ public class ItemService {
     public void deleteItem(TokenClaim tokenClaim, Long itemId) {
 
         User user = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() ->  new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
 
         Item item = itemRepository.findByIdAndStatusAndDateOrElseThrow(itemId);
         item.validateUserIsOwner(user);
         item.deleteItem();
 
-        ItemLocationUpdatedEvent event = new ItemLocationUpdatedEvent(item.getUser().getId(), "REMOVE_ITEM", 
-            Map.of("itemId", item.getId(), "userId", item.getUser().getId()));
+        ItemLocationUpdatedEvent event = new ItemLocationUpdatedEvent(item.getUser().getId(), "REMOVE_ITEM",
+                Map.of("itemId", item.getId(), "userId", item.getUser().getId()));
         applicationEventPublisher.publishEvent(event);
     }
 
@@ -162,7 +270,7 @@ public class ItemService {
     public ItemResponseDto updateItem(TokenClaim tokenClaim, Long itemId, UpdateItemRequestDto request) {
 
         User user = userRepository.findById(tokenClaim.getUserId())
-            .orElseThrow(() ->  new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
+                .orElseThrow(() -> new InvalidRequestException(ExceptionCode.VALIDATION_ERROR));
 
         Item item = itemRepository.findByIdAndStatusAndDateOrElseThrow(itemId);
         item.validateUserIsOwner(user);
@@ -171,41 +279,40 @@ public class ItemService {
         return ItemResponseDto.from(item);
     }
 
-    private String serializeImageUrls(List<String> imageUrls) {
-        // 1. null 또는 빈 리스트 사전 방어
-        if (imageUrls == null || imageUrls.isEmpty()) {
-            return "[]";
-        }
+    @Transactional(readOnly = true)
+    public boolean hasActiveItem(TokenClaim tokenClaim) {
+        return itemRepository.existsByUserIdAndStatus(tokenClaim.getUserId(), ItemStatus.REGISTERED);
+    }
+
+    // 이미지 URL 리스트를 JSON 문자열로 직렬화
+    public String serializeImageUrls(List<String> imageUrls) {
         try {
             return objectMapper.writeValueAsString(imageUrls);
         } catch (JsonProcessingException e) {
-            log.error("이미지 URL 직렬화 실패: {}", e.getMessage());
-            // 2 & 3. 조용한 실패를 막고 예외를 던져 트랜잭션 롤백 유도
+            log.error("이미지 URL 직렬화 실패: {}", e.getMessage(), e);
             throw new InvalidRequestException(ExceptionCode.VALIDATION_ERROR);
         }
     }
 
+    // JSON 문자열을 이미지 URL 리스트로 역직렬화
     public List<String> deserializeImageUrls(String imageUrlsJson) {
-        if (imageUrlsJson == null || imageUrlsJson.trim().isEmpty()) {
-            return List.of();
+        if (imageUrlsJson == null || imageUrlsJson.isBlank()) {
+            return Collections.emptyList();
         }
-        
         try {
-            return objectMapper.readValue(imageUrlsJson, new TypeReference<List<String>>() {});
+            return objectMapper.readValue(imageUrlsJson, new TypeReference<List<String>>() {
+            });
         } catch (JsonProcessingException e) {
-            log.error("이미지 URL 역직렬화 실패: {}", imageUrlsJson, e);
-            // 레거시 데이터 호환을 위해 쉼표 구분 처리도 지원
-            if (imageUrlsJson.startsWith("[") && imageUrlsJson.endsWith("]")) {
-                String content = imageUrlsJson.substring(1, imageUrlsJson.length() - 1);
-                if (content.trim().isEmpty()) {
-                    return List.of();
-                }
-                return java.util.Arrays.stream(content.split(","))
-                    .map(String::trim)
-                    .filter(s -> !s.isEmpty())
-                    .toList();
-            }
-            return List.of();
+            log.error("이미지 URL 역직렬화 실패: ", e);
+            return Collections.emptyList();
         }
+    }
+
+    private void publishSystemStatusUpdatedMessage(Long roomId) {
+        Map<String, Object> payload = Map.of(
+                "type", "SYSTEM",
+                "action", "STATUS_UPDATED",
+                "roomId", roomId);
+        redisDirectMessagePublisher.publish("/server/directRoom/" + roomId, payload);
     }
 }
